--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+/* Universal pre-defined style */
 *,
 *::before,
 *:after {
@@ -6,6 +7,7 @@
   box-sizing: border-box;
 }
 
+/* Root  pre-defined style*/
 :root {
   font-size: calc(1rem + 0.5vw, 1.5rem);
 }
