--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -2,13 +2,87 @@
 $button-color: linear-gradient(
   90deg,
   rgba(203, 157, 35, 1) 0%,
-  rgba(249, 194, 51, 1) 100%
+  /* Varaibles can't be more than a line so we need to create it as mixedin */
+    rgba(249, 194, 51, 1) 100%
 );
 
 $primary-background-color: white;
 $secondary-background-color: #ece8e7;
-$text-color: #333;
+$text-color: orange;
 $button-text-color: white;
+
+//Google Fonts variable Initialization
+
+/* Roboto normal font weight 900*/
+@font-face {
+  font-family: "Roboto-Black";
+  src: url("../path/to/Roboto-Black.ttf") format("truetype"); /* here also */
+  font-weight: 900;
+  font-style: normal;
+}
+
+/* Roboto italic font weight 900  */
+@font-face {
+  font-family: "Roboto-BlackItalic";
+  src: url("../path/to/Roboto-BlackItalic.ttf") format("truetype");
+  font-weight: 900;
+  font-style: italic;
+}
+@font-face {
+  font-family: "Roboto-Bold";
+  src: url("../path/to/Roboto-Bold.ttf") format("truetype");
+  font-weight: bold;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Roboto-BoldItalic";
+  src: url("../path/to/Roboto-BoldItalic.ttf") format("truetype");
+  font-weight: bold;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: "Roboto-Italic";
+  src: url("../path/to/Roboto-Italic.ttf") format("truetype");
+  font-weight: normal;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: "Roboto-Light";
+  src: url("../path/to/Roboto-Light.ttf") format("truetype");
+  font-weight: lighter;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Roboto-LightItalic";
+  src: url("../path/to/Roboto-LightItalic.ttf") format("truetype");
+  font-weight: lighter;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: "Roboto-Medium";
+  src: url("../path/to/Roboto-Medium.ttf") format("truetype");
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Roboto-MediumItalic";
+  src: url("../path/to/Roboto-MediumItalic.ttf") format("truetype");
+  font-weight: 500;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: "Roboto-Regular";
+  src: url("../path/to/Roboto-Regular.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
 
 //Media Query breakpoints
 $xs: 480px;
