--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -2,7 +2,9 @@
 @import "mixin";
 
 .services-container {
-  h2 {
-    color: orange;
-  }
+  width: 90%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 1px solid green;
 }
