--- a/src/styles/_mixin.scss
+++ b/src/styles/_mixin.scss
@@ -1,5 +1,6 @@
 @import "variables";
 
+//Button mixin styles
 @mixin button-style {
   background: linear-gradient(
     360deg,
@@ -14,4 +15,49 @@
   border: none;
   font-size: 1.4rem;
   box-shadow: 4px 8px 40px 0px rgba(142, 110, 26, 15%);
+}
+
+//google font mixin styles
+@mixin heading-1 {
+  @font-face {
+    font-family: "Roboto-Black";
+    src: url("../path/to/Roboto-Black.ttf") format("truetype"); /* here also */
+    font-weight: 900;
+    font-style: normal;
+  }
+}
+@mixin heading-2 {
+  @font-face {
+    font-family: "Roboto-Medium";
+    src: url("../path/to/Roboto-Medium.ttf") format("truetype");
+    font-weight: 700;
+    font-style: normal;
+  }
+}
+
+@mixin heading-3 {
+  @font-face {
+    font-family: "Roboto-Medium";
+    src: url("../path/to/Roboto-Medium.ttf") format("truetype");
+    font-weight: 500;
+    font-style: normal;
+  }
+}
+
+@mixin paragraph-normal {
+  @font-face {
+    font-family: "Roboto-Regular";
+    src: url("../path/to/Roboto-Regular.ttf") format("truetype");
+    font-weight: normal;
+    font-style: normal;
+  }
+}
+
+@mixin paragraph-italics {
+  @font-face {
+    font-family: "Roboto-MediumItalic";
+    src: url("../path/to/Roboto-MediumItalic.ttf") format("truetype");
+    font-weight: 500;
+    font-style: italic;
+  }
 }
