--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -15,6 +15,20 @@ h2 {
   font-style: italic;
 }
 
-button {
-  @include button-style;
+.gallery-container {
+  width: 100%;
+  margin: 0 auto;
+  padding: 0 1.8rem;
+  max-width: 1200px;
+
+  .gallery-images-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-gap: 10px;
+
+    img {
+      width: 100%;
+      height: auto;
+    }
+  }
 }
