--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -17,13 +17,24 @@ h2 {
 
 .gallery-container {
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 10px;
-}
+  margin: 0 auto;
+  padding: 2rem 0;
+  width: 100%;
+  max-width: 1200px;
 
-.gallery-images-container img {
-  width: 300px;
-  height: auto;
+  .gallery-images-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    grid-gap: 10px;
+    justify-items: center;
+    align-items: center;
+
+    img {
+      width: 100%;
+      height: auto;
+    }
+  }
 }
