--- a/src/styles/_mixin.scss
+++ b/src/styles/_mixin.scss
@@ -9,12 +9,23 @@
     rgba(249, 194, 51, 1) 100%
   );
   color: $button-text-color;
-  padding: 0 1.8rem;
-  height: 3.6rem;
-  border-radius: 1.2rem;
+  padding: 0 0.8rem;
+  height: 2.6rem;
+  border-radius: 0.8rem;
   border: none;
-  font-size: 1.4rem;
+  font-size: 1rem;
   box-shadow: 4px 8px 40px 0px rgba(142, 110, 26, 15%);
+}
+@mixin heading-2-color {
+  background: linear-gradient(
+    360deg,
+    rgba(203, 157, 35, 1) 0%,
+    rgba(249, 194, 51, 1) 100%
+  );
+  -webkit-background-clip: text; /* For Safari */
+  -webkit-text-fill-color: transparent; /* For Safari */
+  background-clip: text;
+  text-fill-color: transparent;
 }
 
 //google font mixin styles
