the mixin for heading-2 text color has been created

--- a/src/styles/_mixin.scss
+++ b/src/styles/_mixin.scss
@@ -16,10 +16,20 @@
   font-size: 1.4rem;
   box-shadow: 4px 8px 40px 0px rgba(142, 110, 26, 15%);
 }
-
+@mixin heading-2-color {
+  background: linear-gradient(
+    360deg,
+    rgba(203, 157, 35, 1) 0%,
+    rgba(249, 194, 51, 1) 100%
+  );
+  -webkit-background-clip: text; /* For Safari */
+  -webkit-text-fill-color: transparent; /* For Safari */
+  background-clip: text;
+  text-fill-color: transparent;
+}
 
 //google font mixin styles
-@mixin heading-1{
+@mixin heading-1 {
   @font-face {
     font-family: "Roboto-Black";
     src: url("../path/to/Roboto-Black.ttf") format("truetype"); /* here also */
@@ -27,7 +37,7 @@
     font-style: normal;
   }
 }
-@mixin heading-2{
+@mixin heading-2 {
   @font-face {
     font-family: "Roboto-Medium";
     src: url("../path/to/Roboto-Medium.ttf") format("truetype");
@@ -36,17 +46,16 @@
   }
 }
 
-@mixin heading-3{
+@mixin heading-3 {
   @font-face {
     font-family: "Roboto-Medium";
     src: url("../path/to/Roboto-Medium.ttf") format("truetype");
     font-weight: 500;
     font-style: normal;
   }
-
 }
 
-@mixin paragraph-normal{
+@mixin paragraph-normal {
   @font-face {
     font-family: "Roboto-Regular";
     src: url("../path/to/Roboto-Regular.ttf") format("truetype");
@@ -55,7 +64,7 @@
   }
 }
 
-@mixin paragraph-italics{
+@mixin paragraph-italics {
   @font-face {
     font-family: "Roboto-MediumItalic";
     src: url("../path/to/Roboto-MediumItalic.ttf") format("truetype");
