--- a/src/styles/_mixin.scss
+++ b/src/styles/_mixin.scss
@@ -4,7 +4,7 @@
     360deg,
     rgba(203, 157, 35, 1) 0%,
 
-    rgba(249, 194, 51, 1) 100%
+    rgb(249, 193, 52)0%
   );
   color: $button-text-color;
   padding: 0 1.8rem;
@@ -13,9 +13,6 @@
   border: none;
   font-size: 1.4rem;
   box-shadow: 4px 8px 40px 0px rgba(142, 110, 26, 15%);
-
-
-
 
 
 
