--- a/src/styles/_mixin.scss
+++ b/src/styles/_mixin.scss
@@ -63,3 +63,10 @@
     font-style: italic;
   }
 }
+@mixin yoga{
+  @font-face {
+    font-family: "Roboto-Light";
+    src: url("../path/to/Roboto-Medium.ttf") format("truetype");
+    font-weight: 400;
+    font-style:Light ;
+  }}
