--- a/src/styles/media-query.scss
+++ b/src/styles/media-query.scss
@@ -1,15 +1,17 @@
 
 
-@media (max-width: $sm) {
+@media (max-width: $md) {
     .about-container {
       flex-direction: column;
       align-items: center;
       margin: 1rem 1rem;
       section {
-        max-width: 80vw;
+        max-width: 50vw;
         padding-left: 0;
+        padding-top: 1rem;
         p {
           padding-top: 1rem;
+          font-size: larger;
         }
       }
       img {
@@ -24,7 +26,7 @@
     .about-container {
       margin-top: 2rem;
       section {
-        padding-left: 1rem;
+        padding-left: 0;
         gap: 0;
       }
       p {
