--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -43,44 +43,55 @@ button {
   color: #888;
 }
  */
-.hero{
- /*  width:auto;*/
-  height:70rem;
-  background:url(../assets/images/bgimg.jpg) no-repeat  ;
-   background-size: contain;
- position: relative
- } 
- .hero-heading{
-  @include yoga ;
-  font-weight:100;
-  font-size: 300px;
-  color:rgb(29, 28, 26);
-  padding: 1rem 20rem ;
-  display:flex;
-position: absolute;
-left:5rem;
-z-index:1;
- }
- .name{ 
- top: 20rem;
-  left:25rem;
+ .hero{
+  width: 100%;
+   height:100vh;
+   position: fixed; 
+   background: linear-gradient(360deg, rgba(255,255,255,0) 50%, rgba(209, 204, 204, 0.445) 50%);
+
+
+  }  
+  .hero-heading{
+   @include yoga ;
+   font-weight:100;
+   font-size: 300px;
+   color:rgba(29, 28, 26, 0.805);
+   padding: 0rem 5rem ;
   position: absolute;
-
- }
- .ball{
-  width:700px;
-  height:700px;
-  background-color: rgb(215, 167, 39);
-  border-radius:50%;
+ left:5rem;
+ z-index:2;
+  }
+  .name{ 
+  top: 18rem;
+   left:10rem;
+   position: absolute;
+ 
+  }
+  .ball{
+   width:700px;
+   height:700px;
+   background-color: rgb(215, 167, 39);
+   border-radius:50%;
+  position: relative;
+  top:8rem;
+  left:50rem
+  }
+  .gif{
+ width:90rem;
+ height:55rem;
  position: absolute;
- top:8rem;
- right:20rem
- }
- .gif{
-width:90rem;
-height:55rem;
-position: absolute;
-left:25rem;
-top: -4rem
-
+ left: -30rem;
+ bottom: 1rem
+ 
+  }
+ @media only screen and (max-width:700px){
+  .ball{
+    position: relative;
+    left:35rem
+  }
+  .hero{
+    height: 100vh;
+    width: 100%;
+    background: linear-gradient(360deg, rgba(255,255,255,0) 39%,  rgba(209, 204, 204, 0.445) 39%);
+  }
  }
