--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,5 +1,6 @@
 @import "variables";
 @import "mixin";
+@import "media-query";
 h1 {
   font-family: Roboto-Black;
   font-weight: 900;
@@ -7,7 +8,7 @@ h1 {
   font-style: italic;
 }
 .ContactForm {
-   margin-top: 20rem;
+   margin-top: 10rem;
    display: flex;
    .submit-btn {
     @include button-style
@@ -16,6 +17,12 @@ h1 {
     width: 25rem;
     margin-right: 5rem;
     
+   }
+   .heading1 {
+    @include heading-1
+   }
+   .heading2{
+    @include heading-2
    }
  
 }
