--- a/src/styles/_mixin.scss
+++ b/src/styles/_mixin.scss
@@ -16,6 +16,17 @@
   font-size: 1.4rem;
   box-shadow: 4px 8px 40px 0px rgba(142, 110, 26, 15%);
 }
+@mixin heading-2-color {
+  background: linear-gradient(
+    360deg,
+    rgba(203, 157, 35, 1) 0%,
+    rgba(249, 194, 51, 1) 100%
+  );
+  -webkit-background-clip: text; /* For Safari */
+  -webkit-text-fill-color: transparent; /* For Safari */
+  background-clip: text;
+  text-fill-color: transparent;
+}
 
 
 //google font mixin styles
