--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -9,18 +9,106 @@
     margin-top: 3rem;
     padding: 1.5rem;
     width: 80%;
-    background: $secondary-background-color;
+    /*    background: $secondary-background-color; */
     display: flex;
     flex-direction: column;
     align-items: center;
 
-    header {
+    .tab-container {
+      margin-top: 2rem;
       display: flex;
-      gap: 3rem;
+      justify-content: center;
+      align-items: center;
 
-      button {
-        padding: 0 1.5rem;
-        border: none;
+      .navigation {
+        margin-top: 3rem;
+        position: relative;
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        /*    border: 1px solid black; */
+
+        .active {
+          button {
+            .icon {
+              background: gold;
+              color: #fff;
+              transform: translateY(-55px);
+              box-shadow: 5px 5px 7px rgba(0, 0, 0, 0.25),
+                inset 2px 2px 3px rgba(255, 255, 255, 0.25),
+                inset -3px -3px 5px rgba(0, 0, 0, 0.5);
+              transition-delay: 0s;
+            }
+            .icon::before {
+              transform: scale(1);
+            }
+            .text {
+              opacity: 1;
+              transform: translateY(4rem);
+              transition-delay: 0.2s;
+            }
+          }
+        }
+
+        li {
+          position: relative;
+          list-style: none;
+          margin: 4rem;
+          width: 20rem;
+          display: flex;
+          justify-content: center;
+          button {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-direction: column;
+            text-decoration: none;
+
+            .text {
+              position: absolute;
+              font-size: 1.2rem;
+              color: rgb(46, 38, 38);
+              opacity: 0;
+              border-radius: 15px;
+              transform: translateY(20px);
+              padding: 0.8rem;
+              background: white;
+              box-shadow: 5px 5px 7px rgba(0, 0, 0, 0.25),
+                inset -3px -3px 5px rgba(0, 0, 0, 0.5);
+
+              transition: 0.5s;
+              transition-delay: 0s;
+            }
+
+            .icon {
+              position: absolute;
+              font-size: 5rem;
+              width: 10rem;
+              height: 10rem;
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              color: black;
+              border-radius: 50%;
+              transition: 0.5s;
+              transition-delay: 0.2s;
+            }
+            .icon::before {
+              content: "";
+              position: absolute;
+              inset: 10px;
+              background: #2f363e;
+              border-radius: 50%;
+              box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5),
+                inset 2px 2px 3px rgba(255, 255, 255, 0.25),
+                inset -3px -3px 5px rgba(0, 0, 0, 0.5);
+
+              transform: scale(0);
+              transition: 0.5s;
+            }
+          }
+        }
       }
     }
   }
@@ -34,12 +122,6 @@
     h3 {
       @include heading-3;
     }
-    /*  header {
-        margin: 1rem;
-        display: flex;
-        justify-content: center;
-        gap: 15rem;
-      } */
   }
 }
 section {
@@ -47,7 +129,7 @@ section {
   justify-content: center;
 
   .card-container {
-    @include card-shadow;
+    /* @include card-shadow; */
     .img-fluid {
       height: 30rem;
       width: 25rem;
@@ -65,10 +147,4 @@ section {
       @include heading-3;
     }
   }
-}
-.meditation-section {
-  color: orange;
-}
-.retreat-section {
-  color: hotpink;
 }
