--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -9,3 +9,71 @@ h1 {
 button {
   @include button-style;
 }
+
+
+/* Feedback */
+
+.site-container{
+
+  background-color:#ece8e7 ;
+padding: 3rem 10rem; 
+}
+.article-container{
+  
+ /*  */ /* display: flex;
+  justify-content: center;
+  flex-wrap: wrap; */
+  display: flex;flex-wrap: wrap;
+  justify-content: center;
+
+  gap:3rem;
+}
+
+.article-image{
+  width:8rem;
+  height:8rem;
+  margin:0  60px;
+ 
+border-radius: 50%;
+border:5px solid rgba(190, 143, 57, 0.937);
+
+  overflow: hidden;
+ transform: translatey(-100px);
+}
+.article-image img{
+  max-width: 100%;
+  height: 100%;
+}
+.article-card{
+  width:20rem;
+  height:8rem;
+  background: white;
+  border-radius: 20px;
+  padding: 30px;
+  box-shadow: 0px 10px 33px -3px rgba(0,0,0,0.1);
+  transition: 0.3s;
+  cursor:pointer;
+ 
+}
+.article-card:hover{
+  height: 300px;
+}
+.article-content{
+  padding: 10px 20px;
+  text-align: center;
+  transform: translatey(-100px);
+  opacity: 0;
+  transition: 0.3s;
+
+}
+.article-card:hover > .article-content{
+  opacity: 1;
+  transform:translateY(-100px) ;
+}
+.feedback-heading{
+  color:rgba(190, 143, 57, 0.937);
+  display: flex;
+  justify-content: center;
+  margin-top: 5px ;
+  margin-bottom: 7rem;
+}
