added the padding to the images for spacing

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -24,6 +24,7 @@ h1 {
     transition: all 0.3s ease-in-out;
     box-sizing: border-box;
     position: relative;
+    padding: 1rem;
   }
 
   .gallery-image:hover {
