--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -9,3 +9,20 @@ h1 {
 button {
   @include button-style;
 }
+
+.demosession {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  background-color: $background-color;
+  .demosession__title {
+    font-size: 2rem;
+    margin-bottom: 2rem;
+  }
+  .demosession__button {
+    margin-top: 2rem;
+  }
+}
+```
