--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -10,13 +10,25 @@ button {
   @include button-style;
 }
 
-.demosession {
+.demo {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   height: 100vh;
-  background-color: $background-color;
+
+  h2 {
+    @include heading-2-color;
+    font-size: 2.4rem;
+    margin-bottom: 2rem;
+  }
+
+  img {
+    width: 100%;
+    max-width: 40rem;
+    margin-bottom: 2rem;
+  }
+
   h6 {
     font-size: 2rem;
     margin-bottom: 2rem;
