--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -17,6 +17,14 @@ button {
   justify-content: center;
   height: 100vh;
 
+  .hero {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 2rem;
+  }
+
   h2 {
     @include heading-2-color;
     font-size: 2.4rem;
@@ -34,13 +42,31 @@ button {
     display: flex;
     flex-direction: row;
     align-items: center;
-  }
-  
-  h6 {
-    font-size: 2rem;
-    margin-bottom: 2rem;
-  }
-  button {
-    margin-top: 2rem;
+    width: 50%;
+    gap: 2rem;
+
+    p {
+      font-size: 1.2rem;
+      margin-bottom: 2rem;
+      text-align: start;
+    }
+
+    .book-info {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin-left: 2rem;
+      width: 50%;
+      margin: 0 auto;
+    }
+
+    h6 {
+      font-size: 2rem;
+      margin-bottom: 2rem;
+    }
+    button {
+      margin-top: 2rem;
+      width: 11rem;
+    }
   }
 }
