--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -81,12 +81,12 @@ button {
 
     .circle {
       border: $circle-color 0.1rem solid;
-      width: 200px;
-      height: 200px;
+      width: 70rem;
+      height: 20rem;
       border-radius: 50%;
       margin-top: $margin-size;
       position: absolute;
-      margin-left: -75px;
+      margin-left: -5rem;
     }
   }
 }
