--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -13,25 +13,49 @@ button {
 }
 
 .footer-container {
- width: 100%;
- height: 100vh;
- gap: 5rem;
+  width: 100%;
+  height: 100vh;
+  gap: 5rem;
   padding: 10rem;
- //For some reason align-content doesn't work
+  //For some reason align-content doesn't work
   align-items: center;
   justify-content: space-around;
 
-  .icons{
-    font-size: 5rem;
+  .card {
+    border: none;
+  }
+
+  .card-text {
+    max-width: 30rem;
+  }
+
+  .icons ul {
+    font-size: 3rem;
     display: flex;
     gap: 3rem;
+    a{
+      color: $text-color;
+      
+    }
+    
+   
+  }
+  h4 {
+    font-size: 2rem;
+  }
+  .links {
+    font-size: 1rem;
+    a {
+      text-decoration: none;
+      color: $text-color;
+    }
   }
 }
-.copyright{
- background-color: #2B2B28;
- color: $secondary-background-color;
- font-size: 3rem;
- 
- text-align: center;
- position: relative;
+.copyright {
+  background-color: #2b2b28;
+  color: $button-text-color;
+  font-size: 2rem;
+
+  text-align: center;
+  position: relative;
 }
