--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -36,7 +36,7 @@
             .icon {
               background: #333;
               color: #fff;
-              /*       transform: translateY(-55px); */
+              /*          transform: translateY(-55px); */
               /*       box-shadow: 5px 5px 7px rgba(0, 0, 0, 0.25),
                 inset 2px 2px 3px rgba(255, 255, 255, 0.25),
                 inset -3px -3px 5px rgba(0, 0, 0, 0.5);
@@ -86,8 +86,8 @@
               box-shadow: 5px 5px 7px rgba(0, 0, 0, 0.25),
                 inset -3px -3px 5px rgba(0, 0, 0, 0.5);
 
-              transition: 0.5s;
-              transition-delay: 0s;
+              /* transition: 0.5s;
+              transition-delay: 0s; */
             }
 
             .icon {
