--- a/src/styles/_mixin.scss
+++ b/src/styles/_mixin.scss
@@ -1,6 +1,6 @@
 @import "variables";
 
-//Button mixin styles
+/* ---------------------------- Mixin for button style -------------------------- */
 @mixin button-style {
   background: linear-gradient(
     360deg,
@@ -16,6 +16,8 @@
   font-size: 1.4rem;
   box-shadow: 4px 8px 40px 0px rgba(142, 110, 26, 15%);
 }
+
+/* ---------------------------- Mixin for Heading 2 color style -------------------------- */
 @mixin heading-2-color {
   background: linear-gradient(
     360deg,
@@ -28,7 +30,9 @@
   text-fill-color: transparent;
 }
 
-//google font mixin styles
+/* ---------------------------- Mixin for Google fonts -------------------------- */
+
+// Heading 1
 @mixin heading-1 {
   @font-face {
     font-family: "Roboto-Black";
@@ -37,6 +41,8 @@
     font-style: normal;
   }
 }
+
+// Heading 2
 @mixin heading-2 {
   @font-face {
     font-family: "Roboto-Medium";
@@ -46,6 +52,7 @@
   }
 }
 
+// Heading 3
 @mixin heading-3 {
   @font-face {
     font-family: "Roboto-Medium";
@@ -55,6 +62,7 @@
   }
 }
 
+// Normal paragraph
 @mixin paragraph-normal {
   @font-face {
     font-family: "Roboto-Regular";
@@ -64,11 +72,22 @@
   }
 }
 
+// Italics paragraph
 @mixin paragraph-italics {
   @font-face {
     font-family: "Roboto-MediumItalic";
     src: url("../path/to/Roboto-MediumItalic.ttf") format("truetype");
     font-weight: 500;
     font-style: italic;
+  }
+}
+
+// Logo Fonts mixin
+@mixin logo-font-style {
+  @font-face {
+    font-family: "MoonDance-Regular";
+    src: url("path/to/MoonDance-Regular.ttf") format("truetype");
+    font-weight: normal;
+    font-style: normal;
   }
 }
