--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -33,7 +33,7 @@
     }
 
     .rectangle1 {
-      border: 15px solid #fdeee0;
+      border: 15px solid #f4e4d5;
       margin-left: 50px; /* Add some spacing between the rectangles */
     }
 
