--- a/src/styles/media-query.scss
+++ b/src/styles/media-query.scss
@@ -1,36 +1,27 @@
-
-
-@media (max-width: $md) {
+@media (max-width: 768px) {
+  .app {
     .about-container {
       flex-direction: column;
-      align-items: center;
-      margin: 1rem 1rem;
+
+      img {
+        width: 100%; 
+        height: auto;//The width of the img is set to 100% and height to auto, ensuring that the image scales proportionally to fit the container on smaller screens.
+      }
+
+      .rectangle1,
+      .rectangle2 {
+        display: none;
+      }
+
       section {
-        max-width: 100vw;
-        padding-left: 0;
-        padding-top: 1rem;
+        padding-top: 2rem;
+        max-width: 100%;
+        margin-top: 2rem;
+
         p {
-          padding-top: 1rem;
-          font-size: larger;
+          font-size: 14px;
         }
       }
-      img {
-        margin: 0;
-        width: 400px;
-        height: 500px;
-      }
     }
   }
-
-  @media (max-width: $lg) {
-    .about-container {
-      margin-top: 2rem;
-      section {
-        padding-left: 0;
-        gap: 0;
-      }
-      p {
-        padding-top: 0;
-      }
-    }
-  }
+}
